--- a/Example_before_after/bookmarks_example_after.html
+++ b/Example_before_after/bookmarks_example_after.html
@@ -4,15 +4,15 @@
 <H1>Bookmark menu</H1>
 
 <ul>
-    <HR>    <li><A HREF="https://github.com/HidetomoT/easy_view_bookmarkfile" ADD_DATE="1516546097" LAST_MODIFIED="1516546097">GitHub - HidetomoT/easy_view_bookmarkfile: change bookmark HTML file to be easy to view</A></li>
-    <p><DT><H3 ADD_DATE="1516546128" LAST_MODIFIED="1516631656">example folder (depth=1)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;######1</H3></DT></p>
+    <HR>    <li><A HREF="https://github.com/HidetomoT/easy_view_bookmarkfile">GitHub - HidetomoT/easy_view_bookmarkfile: change bookmark HTML file to be easy to view</A></li>
+    <p><DT><H3>example folder (depth=1)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;######1</H3></DT></p>
     <ul>
-        <li><A HREF="https://github.com/HidetomoT/easy_view_bookmarkfile" ADD_DATE="1516546097" LAST_MODIFIED="1516546097">GitHub - HidetomoT/easy_view_bookmarkfile: change bookmark HTML file to be easy to view</A></li>
-        <p><DT><H3 ADD_DATE="1516546243" LAST_MODIFIED="1516631674">example folder (depth=2)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;######2</H3></DT></p>
+        <li><A HREF="https://github.com/HidetomoT/easy_view_bookmarkfile">GitHub - HidetomoT/easy_view_bookmarkfile: change bookmark HTML file to be easy to view</A></li>
+        <p><DT><H3>example folder (depth=2)&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;######2</H3></DT></p>
         <ul>
-            <li><A HREF="https://github.com/HidetomoT/easy_view_bookmarkfile" ADD_DATE="1516546097" LAST_MODIFIED="1516546097">GitHub - HidetomoT/easy_view_bookmarkfile: change bookmark HTML file to be easy to view</A></li>
-            <li><A HREF="https://github.com/HidetomoT/easy_view_bookmarkfile" ADD_DATE="1516546097" LAST_MODIFIED="1516546097">GitHub - HidetomoT/easy_view_bookmarkfile: change bookmark HTML file to be easy to view</A></li>
+            <li><A HREF="https://github.com/HidetomoT/easy_view_bookmarkfile">GitHub - HidetomoT/easy_view_bookmarkfile: change bookmark HTML file to be easy to view</A></li>
+            <li><A HREF="https://github.com/HidetomoT/easy_view_bookmarkfile">GitHub - HidetomoT/easy_view_bookmarkfile: change bookmark HTML file to be easy to view</A></li>
         </ul><p>
-        <li><A HREF="https://github.com/HidetomoT/easy_view_bookmarkfile" ADD_DATE="1516546097" LAST_MODIFIED="1516546097">GitHub - HidetomoT/easy_view_bookmarkfile: change bookmark HTML file to be easy to view</A></li>
+        <li><A HREF="https://github.com/HidetomoT/easy_view_bookmarkfile">GitHub - HidetomoT/easy_view_bookmarkfile: change bookmark HTML file to be easy to view</A></li>
     </ul><p>
 </ul>
